# villagesql-server

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  MYSQL_VERSION  README.md  SECURITY.md  VERSION  VSQL_VERSION  config.h.cmake
Docs/: ADDING_SQL_COMMANDS.md  ERROR_HANDLING.md
client/: CMakeLists.txt  client_priv.h  mysql.cc  mysqldump.c  mysqldump.cc  mysqlshow.cc
cmake/: VillageSQLExtensionFrameworkConfig.cmake  component.cmake  curl.cmake  do_abi_check.cmake  fastcov.cmake  fido2.cmake  fprofile.cmake  install_layout.cmake  install_macros.cmake  kerberos.cmake  mysql_add_executable.cmake  mysql_version.cmake  plugin.cmake  protobuf_proto_compile.cmake  sasl.cmake  ssl.cmake  vsql_version.cmake
cmake/build_configurations/: feature_set.cmake
cmake/os/: Linux.cmake
docker/dev/: .dockerignore  Dockerfile  build.sh  run.sh
extra/libarchive/: CMakeLists.txt  README.extra
include/: my_alloc.h  my_sqlcommand.h  my_sys.h  sql_string.h
include/mysql/: plugin_audit.h.pp
libmysql/: libmysql.cc
libmysql/authentication_kerberos/: CMakeLists.txt
libmysql/authentication_ldap/: CMakeLists.txt
man/: comp_err.1  ibd2sdi.1  innochecksum.1  lz4_decompress.1  my_print_defaults.1  myisam_ftdump.1  myisamchk.1  myisamlog.1  myisampack.1  mysql.1  mysql.server.1  mysql_config.1  mysql_config_editor.1  mysql_migrate_keyring.1  mysql_secure_installation.1  mysql_ssl_rsa_setup.1  mysql_tzinfo_to_sql.1  mysql_upgrade.1  mysqladmin.1  mysqlbinlog.1  mysqlcheck.1  mysqld.8  mysqld_multi.1  mysqld_safe.1  mysqldump.1  mysqldumpslow.1  mysqlimport.1  mysqlpump.1  mysqlrouter.1  mysqlrouter_keyring.1  mysqlrouter_passwd.1  mysqlrouter_plugin_info.1  mysqlshow.1  mysqlslap.1  ndb_blob_tool.1  ndb_config.1  ndb_delete_all.1  ndb_desc.1  ndb_drop_index.1  ndb_drop_table.1  (+28 more)
mysql-test/: CMakeLists.txt  lsan.supp  mysql-test-run.pl  valgrind.supp
mysql-test/include/: default_my.cnf  mtr_warnings.sql  mysql_upgrade_cleanup.inc  mysql_upgrade_preparation.inc  mysqld--help.inc  plugin_auth_check_non_default_users.inc  schema_read_only.inc
mysql-test/r/: 1st.result  basedir.result  ctype_gb18030_encoding_cn.result  ctype_gb18030_encoding_utf8.result  dd_is_compatibility_ci.result  dd_is_compatibility_cs.result  drop.result  information_schema_ci.result  information_schema_cs.result  information_schema_keywords.result  init_file_one_line_multiple_statements.result  initialize.result  mysqld--help-notwin.result  mysqld_daemon.result  mysqld_safe.result  mysqldump_bugs.result  mysqlshow_ci.result  mysqlshow_cs.result  mysqlslap.result  partition_innodb_tablespace.result  partition_locking.result  plugin_auth_qa.result  plugin_auth_qa_1.result  plugin_auth_qa_2.result  ps_sys_upgrade.result  roles.result  schema_read_only_ci.result  schema_read_only_cs.result  (+4 more)
mysys/: CMakeLists.txt  my_alloc.cc  my_fopen.cc  my_init.cc  my_rdtsc.cc  my_thr_init.cc  print_version.cc  stacktrace.cc
router/: CMakeLists.txt
scripts/: CMakeLists.txt  build-ci.sh  regtest_villint.py  setup_dev_db.sh  setup_linux_build_env.sh  should_run_all_tests.sh  test-ci.sh  villint.sh
share/: messages_to_clients.txt  messages_to_error_log.txt
sql/: CMakeLists.txt  binlog.cc  binlog.h  bootstrap.cc  cmp_varlen_keys.h  create_field.cc  create_field.h  dd_table_share.cc  field.cc  field.h  filesort.cc  handler.cc  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_func.cc  item_func.h  item_geofunc.cc  item_geofunc.h  item_gtid_func.cc  item_strfunc.cc  item_strfunc.h  item_sum.cc  key.cc  key_spec.cc  lex.h  log_event.cc  log_resource.cc  mdl.cc  mdl.h  mdl_context_backup.h  mysqld.cc  mysqld.h  parse_tree_column_attrs.h  parse_tree_items.cc  parse_tree_nodes.cc  parser_service.cc  partition_info.cc  protocol_classic.cc  (+50 more)
sql-common/: net_serv.cc  sql_string.cc
testclients/: mysql_client_test.cc
unittest/: CMakeLists.txt
unittest/gunit/villagesql/: CMakeLists.txt  semver-t.cc  type_descriptor-t.cc  victionary_client-t.cc  villagesql_test_main.cc
villagesql/: CMakeLists.txt
villagesql/common/: CMakeLists.txt  semver.cc
villagesql/examples/vsql-complex/: CMakeLists.txt  manifest.json
villagesql/examples/vsql-complex/src/: complex.cc
villagesql/examples/vsql-complex/test/r/: complex_create.result  complex_delete.result  complex_functions_arithmetic.result  complex_functions_utility.result  complex_read.result  complex_update.result
villagesql/examples/vsql-complex/test/t/: complex_create.test  complex_delete.test  complex_functions_arithmetic.test  complex_functions_utility.test  complex_read.test  complex_update.test
villagesql/examples/vsql-simple/: CMakeLists.txt  manifest.json
villagesql/examples/vsql-simple/src/: extension.cc
villagesql/include/: error.h  semver.h  version.h.in
villagesql/schema/: ADDING_SYSTEM_TABLES.md  CMakeLists.txt  schema_manager.cc  schema_manager.h  system_table_check.h  upgrade.cc  upgrade.h  util.cc  util.h  victionary_client-impl.h  victionary_client.cc  victionary_client.h  villagesql_schema.sql.in
villagesql/schema/descriptor/: extension_descriptor.cc  extension_descriptor.h  type_context.h  type_descriptor.cc  type_descriptor.h
villagesql/schema/systable/: custom_columns.cc  custom_columns.h  extensions.cc  extensions.h  helpers.cc  helpers.h  properties.cc  properties.h
villagesql/sdk/include/villagesql/: extension.h  extension_builder.h  func_builder.h  type_builder.h
villagesql/sdk/include/villagesql/abi/: types.h
villagesql/sdk/template/: CMakeLists.txt  manifest.json
villagesql/sdk/template/src/: extension.cc
villagesql/sql/: CMakeLists.txt  custom_vdf.cc  custom_vdf.h  initialize.cc  initialize.h  metadata_modifier.cc  metadata_modifier.h  parse_tree_items.cc  parse_tree_items.h  util.cc  util.h
villagesql/system_views/: CMakeLists.txt  columns.cc  columns.h  extensions.cc  extensions.h
villagesql/types/: CMakeLists.txt  pt_custom_type.h  util.cc  util.h
villagesql/vdf/: CMakeLists.txt  vdf_handler.cc  vdf_handler.h
villagesql/veb/: CMakeLists.txt  sql_extension.cc  sql_extension.h  veb_file.cc  veb_file.h
(+1336 files in other folders)
